<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisitActivity" >

    <include
        android:id="@+id/include_visit"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/include1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        layout="@layout/top" />

	<TextView 
	    android:id="@+id/visit_tv"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/include_visit"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_title"
	    android:textSize="@dimen/information_textsize"/>
	<TextView 
	    android:id="@+id/visit_tv2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv2"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content2"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv3"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content3"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv4"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content4"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv5"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content5"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv6"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content6"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv8"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv7"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content7"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv9"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv8"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content8"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv10"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv9"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content9"
	    android:textSize="@dimen/information_contentsize"/>
	<TextView 
	    android:id="@+id/visit_tv11"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/visit_tv10"
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="30dp"
	    android:text="@string/visit_content10"
	    android:textSize="@dimen/information_contentsize"/>
</RelativeLayout>
